--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Firstname Lastname</title>
+  <title>Yulian Caridad</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
   <!-- Bootstrap core CSS -->
   <link href="css/styles.css" rel="stylesheet">
